--- a/WhatTypeOfDogIsThat/Breeds/BreedsViewController.xib
+++ b/WhatTypeOfDogIsThat/Breeds/BreedsViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BreedsViewController" customModule="WhatTypeOfDogIsThat" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="Mdp-Jg-XLV" id="mFT-6l-TIg"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,8 +18,24 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Mdp-Jg-XLV">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="dLN-AD-pNi"/>
+                        <outlet property="delegate" destination="-1" id="uSU-6x-8Aj"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="Mdp-Jg-XLV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Qca-rY-UlL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Mdp-Jg-XLV" secondAttribute="trailing" id="aJf-2r-yK7"/>
+                <constraint firstItem="Mdp-Jg-XLV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="thp-zn-Dss"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Mdp-Jg-XLV" secondAttribute="bottom" id="wTk-Tu-2rT"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="94"/>
         </view>
     </objects>
