--- a/WhatTypeOfDogIsThat/Breeds/Cells/BreedTableViewCell.xib
+++ b/WhatTypeOfDogIsThat/Breeds/Cells/BreedTableViewCell.xib
@@ -4,37 +4,87 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BreedTableViewCell" customModule="WhatTypeOfDogIsThat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="128" id="KGk-i7-Jjw" customClass="BreedTableViewCell" customModule="WhatTypeOfDogIsThat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z1-GW-h3b">
-                        <rect key="frame" x="10" y="10" width="41.5" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8Mo-5B-y2m">
+                        <rect key="frame" x="0.0" y="0.0" width="313" height="102"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ae-Mu-j5M">
+                                <rect key="frame" x="0.0" y="0.0" width="313" height="102"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Met-Ip-xK0">
+                                        <rect key="frame" x="0.0" y="0.0" width="203" height="102"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="56F-vH-LvC">
+                                                <rect key="frame" x="10" y="10" width="41.5" height="51.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzn-fQ-tEz">
+                                                <rect key="frame" x="10" y="71.5" width="41.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="56F-vH-LvC" firstAttribute="top" secondItem="Met-Ip-xK0" secondAttribute="top" constant="10" id="Fvm-xq-X2a"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="56F-vH-LvC" secondAttribute="trailing" constant="10" id="PPX-YH-pN3"/>
+                                            <constraint firstItem="nzn-fQ-tEz" firstAttribute="top" secondItem="56F-vH-LvC" secondAttribute="bottom" constant="10" id="YzH-DG-Tu1"/>
+                                            <constraint firstAttribute="bottom" secondItem="nzn-fQ-tEz" secondAttribute="bottom" constant="10" id="Znt-TA-YCV"/>
+                                            <constraint firstItem="nzn-fQ-tEz" firstAttribute="leading" secondItem="Met-Ip-xK0" secondAttribute="leading" constant="10" id="m7F-LJ-AvG"/>
+                                            <constraint firstItem="56F-vH-LvC" firstAttribute="leading" secondItem="Met-Ip-xK0" secondAttribute="leading" constant="10" id="ngU-Fv-4ep"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OeR-oB-dt2">
+                                        <rect key="frame" x="203" y="10" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="vQU-I2-iXs"/>
+                                            <constraint firstAttribute="width" constant="100" id="z3W-Me-OB1"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="OeR-oB-dt2" secondAttribute="bottom" constant="10" id="F6W-A4-SQ2"/>
+                                    <constraint firstAttribute="trailing" secondItem="OeR-oB-dt2" secondAttribute="trailing" constant="10" id="IWL-pS-SdR"/>
+                                    <constraint firstItem="OeR-oB-dt2" firstAttribute="top" secondItem="4Ae-Mu-j5M" secondAttribute="top" constant="10" id="XPU-cz-Ehv"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6Z1-GW-h3b" secondAttribute="trailing" constant="10" id="6ps-Mk-Uwi"/>
-                    <constraint firstItem="6Z1-GW-h3b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="FZL-sE-ek1"/>
-                    <constraint firstAttribute="bottom" secondItem="6Z1-GW-h3b" secondAttribute="bottom" constant="10" id="RCK-nf-aSX"/>
-                    <constraint firstItem="6Z1-GW-h3b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="h4a-9o-8xn"/>
+                    <constraint firstItem="8Mo-5B-y2m" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="UPH-PI-5wm"/>
+                    <constraint firstItem="8Mo-5B-y2m" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eZO-09-ZNN"/>
+                    <constraint firstAttribute="trailing" secondItem="8Mo-5B-y2m" secondAttribute="trailing" constant="7" id="oSA-I2-act"/>
+                    <constraint firstAttribute="bottom" secondItem="8Mo-5B-y2m" secondAttribute="bottom" id="sEU-cL-fOM"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="breedTextLabel" destination="6Z1-GW-h3b" id="JuJ-Fe-fvQ"/>
+                <outlet property="breedImageView" destination="OeR-oB-dt2" id="bcP-vY-hjc"/>
+                <outlet property="breedTextLabel" destination="56F-vH-LvC" id="6iU-YD-PSO"/>
+                <outlet property="subBreedsTextLabel" destination="nzn-fQ-tEz" id="bvZ-LM-rMY"/>
             </connections>
-            <point key="canvasLocation" x="-39" y="-11"/>
+            <point key="canvasLocation" x="-39.130434782608695" y="16.741071428571427"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
