--- a/WhatTypeOfDogIsThat/Breeds/Breeds List/Cells/BreedTableViewCell.xib
+++ b/WhatTypeOfDogIsThat/Breeds/Breeds List/Cells/BreedTableViewCell.xib
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cHH-ET-0d8">
-                        <rect key="frame" x="0.0" y="0.0" width="359" height="178"/>
+                        <rect key="frame" x="0.0" y="10" width="359" height="178"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Th6-1D-7oE">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="178"/>
@@ -48,9 +48,9 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="cHH-ET-0d8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="26i-QP-hnH"/>
+                    <constraint firstItem="cHH-ET-0d8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="26i-QP-hnH"/>
                     <constraint firstAttribute="trailing" secondItem="cHH-ET-0d8" secondAttribute="trailing" id="HwE-kb-N1C"/>
-                    <constraint firstAttribute="bottom" secondItem="cHH-ET-0d8" secondAttribute="bottom" id="YT9-AZ-Hli"/>
+                    <constraint firstAttribute="bottom" secondItem="cHH-ET-0d8" secondAttribute="bottom" constant="10" id="YT9-AZ-Hli"/>
                     <constraint firstItem="cHH-ET-0d8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bDM-ma-sJI"/>
                 </constraints>
             </tableViewCellContentView>
