--- a/WhatTypeOfDogIsThat/Breeds/BreedInfo/Cells/BreedNameTableViewCell.xib
+++ b/WhatTypeOfDogIsThat/Breeds/BreedInfo/Cells/BreedNameTableViewCell.xib
@@ -17,8 +17,8 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h66-Zb-7tw">
-                        <rect key="frame" x="12" y="5" width="73.5" height="76"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                        <rect key="frame" x="12" y="5" width="37" height="76"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
