--- a/WhatTypeOfDogIsThat/Breeds/Breeds List/Cells/BreedTableViewCell.xib
+++ b/WhatTypeOfDogIsThat/Breeds/Breeds List/Cells/BreedTableViewCell.xib
@@ -10,34 +10,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="178" id="KGk-i7-Jjw" customClass="BreedTableViewCell" customModule="WhatTypeOfDogIsThat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="359" height="178"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="200" id="KGk-i7-Jjw" customClass="BreedTableViewCell" customModule="WhatTypeOfDogIsThat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="359" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="359" height="178"/>
+                <rect key="frame" x="0.0" y="0.0" width="359" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cHH-ET-0d8">
-                        <rect key="frame" x="0.0" y="10" width="359" height="178"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="cHH-ET-0d8">
+                        <rect key="frame" x="7" y="10" width="352" height="178"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Th6-1D-7oE">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="178"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Th6-1D-7oE">
+                                <rect key="frame" x="0.0" y="0.0" width="70" height="178"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="XdY-aX-9Fb"/>
-                                    <constraint firstAttribute="height" constant="100" id="Yaa-Zh-ZYm"/>
+                                    <constraint firstAttribute="width" constant="70" id="XdY-aX-9Fb"/>
+                                    <constraint firstAttribute="height" constant="70" id="Yaa-Zh-ZYm"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="H5b-qN-YXJ">
-                                <rect key="frame" x="105" y="0.0" width="254" height="178"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="H5b-qN-YXJ">
+                                <rect key="frame" x="82" y="0.0" width="270" height="178"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBy-LF-hB8">
-                                        <rect key="frame" x="0.0" y="0.0" width="254" height="113.5"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="270" height="89"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hiz-41-ykt">
-                                        <rect key="frame" x="0.0" y="113.5" width="254" height="64.5"/>
+                                        <rect key="frame" x="0.0" y="89" width="270" height="89"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <color key="textColor" systemColor="separatorColor"/>
                                         <nil key="highlightedColor"/>
@@ -51,7 +51,7 @@
                     <constraint firstItem="cHH-ET-0d8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="26i-QP-hnH"/>
                     <constraint firstAttribute="trailing" secondItem="cHH-ET-0d8" secondAttribute="trailing" id="HwE-kb-N1C"/>
                     <constraint firstAttribute="bottom" secondItem="cHH-ET-0d8" secondAttribute="bottom" constant="10" id="YT9-AZ-Hli"/>
-                    <constraint firstItem="cHH-ET-0d8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bDM-ma-sJI"/>
+                    <constraint firstItem="cHH-ET-0d8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="bDM-ma-sJI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -60,7 +60,7 @@
                 <outlet property="breedTextLabel" destination="eBy-LF-hB8" id="MyH-bO-42Z"/>
                 <outlet property="subBreedsTextLabel" destination="hiz-41-ykt" id="3Ui-VJ-LlA"/>
             </connections>
-            <point key="canvasLocation" x="-12.318840579710146" y="42.1875"/>
+            <point key="canvasLocation" x="-12.318840579710146" y="49.553571428571423"/>
         </tableViewCell>
     </objects>
     <resources>
