--- a/WhatTypeOfDogIsThat/Breeds/Favourite List/Cells/FavouriteButtonTableViewCell.xib
+++ b/WhatTypeOfDogIsThat/Breeds/Favourite List/Cells/FavouriteButtonTableViewCell.xib
@@ -12,17 +12,19 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="73" id="KGk-i7-Jjw" customClass="FavouriteButtonTableViewCell" customModule="WhatTypeOfDogIsThat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="73"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="390" height="73"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDM-fO-Dhs">
-                        <rect key="frame" x="10" y="10" width="370" height="50"/>
+                        <rect key="frame" x="10" y="10" width="370" height="53"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="50" id="w6T-63-va2"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="w6T-63-va2"/>
                         </constraints>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="filled" title="Favourite"/>
+                        <buttonConfiguration key="configuration" style="filled" title="Favourite">
+                            <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="0.0"/>
+                        </buttonConfiguration>
                         <connections>
                             <action selector="didTapFavouriteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bz1-J3-GgB"/>
                         </connections>
