--- a/WhatTypeOfDogIsThat/Breeds/BreedInfo/Cells/BreedNameTableViewCell.xib
+++ b/WhatTypeOfDogIsThat/Breeds/BreedInfo/Cells/BreedNameTableViewCell.xib
@@ -16,17 +16,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="378" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h66-Zb-7tw">
-                        <rect key="frame" x="12" y="5" width="37" height="76"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h66-Zb-7tw">
+                        <rect key="frame" x="15" y="7" width="37" height="72"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="h66-Zb-7tw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="18H-hs-CcV"/>
-                    <constraint firstItem="h66-Zb-7tw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="JdG-13-6ZA"/>
-                    <constraint firstAttribute="bottom" secondItem="h66-Zb-7tw" secondAttribute="bottom" constant="5" id="XxZ-Ng-FDk"/>
+                    <constraint firstItem="h66-Zb-7tw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="18H-hs-CcV"/>
+                    <constraint firstItem="h66-Zb-7tw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="JdG-13-6ZA"/>
+                    <constraint firstAttribute="bottom" secondItem="h66-Zb-7tw" secondAttribute="bottom" constant="7" id="XxZ-Ng-FDk"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="h66-Zb-7tw" secondAttribute="trailing" id="jaZ-Dz-icF"/>
                 </constraints>
             </tableViewCellContentView>
